@@ -2,12 +2,20 @@
 
 {{$NEXT}}
  [00 Trivial]
- - update reportprereqs test
+ - no code changes.
+ - tests augmented.
+ - whitespace adjusted.
 
  [Dependencies::Stats]
  - Dependencies changed since 1.001000, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
  - test: -3
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
+
+ [Tests]
+ - update reportprereqs test
 
 1.001000 2014-07-30T13:22:16Z
  [00 Major]
